data model, redis, celery, flower

--- a/.env.dev
+++ b/.env.dev
@@ -9,3 +9,8 @@ POSTGRES_USER=db_user
 POSTGRES_PASSWORD=db_pass
 POSTGRES_DB=video_codec_db
 DATABASE=postgres
+
+CELERY_BROKER_URL=redis://redis:6379/2
+CELERY_RESULT_BACKEND=redis://redis:6379/3
+
+VIDEOS_PATH=/usr/src/app/videos/
