--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,21 +1,21 @@
-FROM python:3.11-bullseye
+FROM python:3.11-bullseye AS base
 
 WORKDIR /usr/src/app
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+ENV DJANGO_SETTINGS_MODULE=video_coding.settings
+ENV PIP_ROOT_USER_ACTION=ignore
 
 RUN apt-get update -y && apt-get dist-upgrade -y
-RUN apt install netcat libpq-dev python3-dev -y
+RUN apt install netcat libpq-dev python3-dev ffmpeg -y
 
 RUN pip install --upgrade pip
-COPY ./requirements.txt .
+COPY ./app/requirements.txt .
 RUN pip install -r requirements.txt
-
-COPY ./entrypoint.sh .
-RUN sed -i 's/\r$//g' /usr/src/app/entrypoint.sh
-RUN chmod +x /usr/src/app/entrypoint.sh
 
 COPY . .
 
-ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
+FROM base AS development
+
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
