--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,9 @@
+boto3==1.26.109
+botocore==1.29.109
+celery[redis,gevent]==5.2.7
 Django==4.2
+django-jsonform==2.16
+ipython==8.12.0
 pre-commit==3.2
 psycopg2-binary==2.9.6
 requests==2.28
