--- a/app/tests/pytest.ini
+++ b/app/tests/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 python_files=
     *.py
+filterwarnings =
+    ignore:SelectableGroups dict interface is deprecated. Use select:DeprecationWarning
