added pytest options to config file

--- a/app/tests/pytest.ini
+++ b/app/tests/pytest.ini
@@ -3,3 +3,10 @@ python_files=
     *.py
 filterwarnings =
     ignore:SelectableGroups dict interface is deprecated. Use select:DeprecationWarning
+addopts =
+    --cov=video_coding
+    --cov-config=tests/.coveragerc
+    --cov-report term:skip-covered
+    --nomigrations
+    --create-db
+    --verbose
