added tests for main logic

--- a/.env.test
+++ b/.env.test
@@ -14,3 +14,5 @@ CELERY_BROKER_URL=redis://redis:6379/4
 CELERY_RESULT_BACKEND=redis://redis:6379/5
 
 VIDEOS_PATH=/tmp/videos/
+
+TEST_OVF_PATH=/usr/src/app/tests/resources/test.avi
