properties for accessing relevant ffprobe_info data in an easy way

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,7 @@
 celery[redis,gevent]==5.2.7
 Django==4.2
 django-jsonform==2.16
+hurry.filesize==0.9
 ipython==8.12.0
 pre-commit==3.2
 psycopg2-binary==2.9.6
