added option to use an already existing video file instead of re-uploading one

--- a/.env.dev
+++ b/.env.dev
@@ -14,3 +14,5 @@ CELERY_BROKER_URL=redis://redis:6379/2
 CELERY_RESULT_BACKEND=redis://redis:6379/3
 
 VIDEOS_PATH=/usr/src/app/videos/
+PROCESSED_OVFS_REL_PATH=processed/
+OVFS_FOR_PROCESSING_REL_PATH=resources/
