--- a/.env.test
+++ b/.env.test
@@ -14,5 +14,7 @@ CELERY_BROKER_URL=redis://redis:6379/4
 CELERY_RESULT_BACKEND=redis://redis:6379/5
 
 VIDEOS_PATH=/tmp/videos/
+PROCESSED_OVFS_REL_PATH=processed/
+OVFS_FOR_PROCESSING_REL_PATH=resources/
 
 TEST_OVF_PATH=/usr/src/app/tests/resources/test.avi
