--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,5 +5,6 @@ django-crispy-forms==2.0
 django-jsonform==2.16
 hurry.filesize==0.9
 ipython==8.12.0
+plotly==5.15.0
 pre-commit==3.2
 psycopg2-binary==2.9.6
