--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,4 @@
+bjontegaard==1.2.0
 celery[redis,gevent]==5.2.7
 crispy-bootstrap4==2022.1
 Django==4.2
@@ -5,6 +6,8 @@ django-crispy-forms==2.0
 django-jsonform==2.16
 hurry.filesize==0.9
 ipython==8.12.0
+pandas==2.0.3
 plotly==5.15.0
 pre-commit==3.2
 psycopg2-binary==2.9.6
+statsmodels==0.14.0
