--- a/.env.test
+++ b/.env.test
@@ -17,4 +17,4 @@ VIDEOS_PATH=/tmp/videos/
 PROCESSED_OVFS_REL_PATH=processed/
 OVFS_FOR_PROCESSING_REL_PATH=resources/
 
-TEST_OVF_PATH=/usr/src/app/tests/resources/test.avi
+TEST_OVF_PATH=/usr/src/app/tests/resources/test.mkv
