--- a/app/tests/pytest.ini
+++ b/app/tests/pytest.ini
@@ -3,6 +3,7 @@ python_files=
     *.py
 filterwarnings =
     ignore:SelectableGroups dict interface is deprecated. Use select:DeprecationWarning
+    ignore:Curves do not overlap. BD cannot be calculated.:UserWarning
 addopts =
     --cov=video_coding
     --cov-config=tests/.coveragerc
