--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,5 +30,5 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Run pre-commit hooks
-        run: ./scripts/run_code_checks.sh
+        run: ./scripts/run_code_checks.sh --show-diff-on-failure
         shell: bash
