--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   CODE_CHECKS_IMAGE_TAG: code_checks:latest
+  TEST_IMAGE_TAG: tests:latest
 
 jobs:
   ci:
@@ -31,4 +32,20 @@ jobs:
 
       - name: Run pre-commit hooks
         run: ./scripts/run_code_checks.sh --show-diff-on-failure
+        shell: bash
+
+      - name: Build tests image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
+          load: true
+          file: ./app/Dockerfile
+          tags: ${{ env.TESTS_IMAGE_TAG }}
+          target: test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Run tests
+        run: docker compose run --rm test pytest tests/
         shell: bash
