added DJANGO_SETTINGS_MODULE env var

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,7 @@
 DEBUG=1
 SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_SETTINGS_MODULE=video_coding.settings
 
 SQL_ENGINE=django.db.backends.postgresql
 SQL_HOST=db
